--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,21 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 Django==4.2.2
+filelock==3.12.4
+fsspec==2023.10.0
+Jinja2==3.1.2
 kombu==5.3.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.2
 prompt-toolkit==3.0.39
 python-dateutil==2.8.2
 redis==5.0.1
 six==1.16.0
 sqlparse==0.4.4
+sympy==1.12
+torch==2.1.0
+typing_extensions==4.8.0
 tzdata==2023.3
 vine==5.0.0
 wcwidth==0.2.8
